# dl-rendering

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/include/app/: fps_counter.h
app/src/: controller.cpp  controller.h  fps_counter.cpp  scene.h
app/src/objects/: i_intersactable.h  sphere.cpp  sphere.h
app/src/win32/: win32_main.cpp
engine/: CMakeLists.txt
engine/include/engine/: core.h  test.h  window.h
engine/include/engine/math/: ray.h  sphere.h  vec3.h
engine/src/: int_window.h  platform.h  test.cpp  window.cpp
engine/src/math/: ray.cpp  sphere.cpp  vec3.cpp
engine/src/win32/: win32_core.h  win32_platform.h  win32_window.cpp
